Fixes post loop pagination alignment.

--- a/src/scss/components/_posts.scss
+++ b/src/scss/components/_posts.scss
@@ -4,7 +4,8 @@
 
 .posts__pagination {
   display: flex;
-  gap: var(--spacer);
+  flex-direction: row-reverse;
+  justify-content: space-between;
 
   .next,
   .prev {
